[project]
name = "lru_cache"
version = "0.1.0"
description = "LRU cache logic so Jonathan always remembers"
authors = [
    {name = "Jonathan Cook", email = "jcookbme@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "ruff>=0.11.13",
    "pytest>=8.4.0",
]
